# trueblocks-core

./: .clang-format  .cmakelintrc  .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .markdownlint.yaml  BLOCK_TIME_CONFIG.md  BUILD.md  CHANGES  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Linux_Centos_build_steps.txt  Linux_Fedora_build_steps.txt  Linux_debian_build_steps.txt  MIGRATIONS.md  README.adoc  README.md  README_CMAKE_COMPILE.md  VERSION_BUMP.md  core.code-workspace  fedora_compilation_warnings.txt  go.mod  go.work  go.work.sum  makefile  release-name.txt  shell.nix  trueblocks-core.code-workspace
src/: .gitignore  CMakeLists.txt  README.md  README_CMAKE_COMPILE.md  cache_setup.cmake  cmd-line-endpoints.csv  cmd-line-options.csv  design.txt  makefile  openapitools.json
src/apps/: .gitignore  CMakeLists.txt  README.md  makefile
src/apps/acctExport/: .gitignore  CMakeLists.txt  README.md  abirecord.cpp  abirecord.h  accounting.cpp  acctExport.cpp  acctscrapestats.cpp  acctscrapestats.h  accumulator.cpp  accumulator.h  articulate.cpp  counts.cpp  counts.h  display.cpp  displayapp.cpp  displayapp.h  handle_accounting.cpp  handle_appearances.cpp  handle_balances.cpp  handle_counts.cpp  handle_export.cpp  handle_hashes.cpp  handle_logs.cpp  handle_neighbors.cpp  handle_query_final.cpp  handle_query_staging.cpp  handle_receipts.cpp  handle_statements.cpp  handle_traces.cpp  handle_traverser.cpp  handle_traverser.h  handle_traversers.cpp  ipfshash.cpp  ipfshash.h  load_data.cpp  main.cpp  monitorcount.cpp  monitorcount.h  options.cpp  (+25 more)
src/apps/acctExport_mysql/: CMakeLists.txt  acctExport.cpp  configs.cpp  migrate.cpp  options.cpp  options.h  parselib.cpp  prices.cpp  sql_database.cpp  sql_database.h
src/apps/acctScrape/: CMakeLists.txt  README.md  acctScrape.cpp  acctscrapestats.cpp  acctscrapestats.h  handle_bloom_query.cpp  handle_clean.cpp  handle_index.cpp  handle_index_query.cpp  handle_query_final.cpp  handle_query_staging.cpp  handle_query_unripe.cpp  handle_traces.cpp  index_query_ascii.cpp  index_query_binary.cpp  main.cpp  options.cpp  options.h
src/apps/acctScrape2/: CMakeLists.txt  go.mod  locate_test.go  stream_test.go  streamtest.sh  test.sh
src/apps/blaze/: CMakeLists.txt  go.mod  go.sum
src/apps/blockAcct/: .gitignore  CMakeLists.txt  README.md
src/apps/blockMan/: CMakeLists.txt  README.md  blockMan.cpp  check.cpp  forEvery.cpp  handle_check.cpp  handle_dups.cpp  handle_list.cpp  handle_stats.cpp  options.cpp  options.h
src/apps/blockScrape/: .gitignore  CMakeLists.txt  README.md  blockScrape.cpp  bloom.h  bloomwrite.cpp  bloomwrite.h  consolidator.cpp  consolidator.h  document.txt  freshen.cpp  fullBlockIndex.cpp  handle_block_scrape.cpp  handle_consolidate_chunks.cpp  handle_finalize_chunks.cpp  handle_freshen.cpp  handle_monitor_scrape.cpp  handle_pinning.cpp  handle_reindex.cpp  handle_reporting.cpp  handle_reset.cpp  handle_scrape.cpp  handle_stage_chunks.cpp  handle_write_chunks.cpp  main.cpp  options.cpp  options.h  pinatapin.cpp  pinlib.cpp  pinlib.h  pinnedchunk.cpp  pinnedchunk.h  report_status.cpp  scraper_context.cpp  scraper_context.h
src/apps/blockScrape_old/: CMakeLists.txt  README.md  handle_reindex.cpp  node.cpp  node.h  node_curl.cpp  node_curl.h  options.cpp  options.h  scraper_context.cpp  scraper_context.h
src/apps/bloomMan/: CMakeLists.txt  README.md  bloomMan.cpp  handle_addrs.cpp  handle_check.cpp  handle_raw.cpp  handle_rewrite.cpp  handle_stats.cpp  handle_visit.cpp  options.cpp  options.h  supporting.cpp
src/apps/cacheMan/: CMakeLists.txt  README.md  abicache.cpp  cache.cpp  cache.h  cacheMan.cpp  chaincache.cpp  chaincache.h  handle_bals.cpp  handle_import.cpp  handle_merge.cpp  handle_read.cpp  handle_removal.cpp  handle_sort.cpp  handle_write.cpp  main.cpp  monitorcache.cpp  monitorcacheitem.cpp  options.cpp  options.h  pricecache.cpp  pricecacheitem.h  slurpcache.h  status.h
src/apps/cacheStatus/: CMakeLists.txt  README.md  abicache.cpp  abicache.h  abicacheitem.cpp  abicacheitem.h  addresscache.cpp  addresscache.h  apiresult.cpp  apiresult.h  cache.cpp  cache.h  cachebase.cpp  cachebase.h  chaincache.cpp  chaincache.h  collectioncache.cpp  collectioncache.h  collectioncacheitem.cpp  collectioncacheitem.h  configfile.cpp  configfile.h  configgroup.cpp  configgroup.h  configitem.cpp  configitem.h  configsection.cpp  configsection.h  configuration.cpp  configuration.h  entitycache.cpp  entitycache.h  entitycacheitem.cpp  entitycacheitem.h  handle_config.cpp  handle_heatmap.cpp  handle_import.cpp  handle_listing.cpp  handle_migrate.cpp  handle_migrate_test.cpp  (+31 more)
src/apps/chafra/: README.md
src/apps/chifra/: .gitignore  .golangci.yml  CMakeLists.txt  LEECHING.md  README.md  chifra.cpp  chifra.txt  file  go.mod  go.sum  handle_accounts.cpp  handle_balances.cpp  handle_blocks.cpp  handle_commands.cpp  handle_config.cpp  handle_daemon.cpp  handle_data.cpp  handle_export.cpp  handle_freshen.cpp  handle_functions.cpp  handle_help.cpp  handle_init.cpp  handle_leech.cpp  handle_list.cpp  handle_ls.cpp  handle_name.cpp  handle_names.cpp  handle_prices.cpp  handle_rm.cpp  handle_scrape.cpp  handle_seed.cpp  handle_settings.cpp  handle_slurp.cpp  handle_status.cpp  ipfs_adds.txt  ipfs_get.txt  main.cpp  main.go  options.cpp  options.h  (+2 more)
src/apps/chifra-new/: CMakeLists.txt  go.sum  main.go
src/apps/chunkMan/: CMakeLists.txt  README.md  handle_check.cpp  handle_extract.cpp  handle_extract_blooms.cpp  (+5 more)
src/dev_tools/: BUMPING_VERSION.md  CMakeLists.txt  build_and_test.sh
src/examples/: .gitignore  CMakeLists.txt  README.md  makefile
src/go-apps/: .gitignore  CMakeLists.txt
src/libs/: .gitignore  CMakeLists.txt  README.md  makefile  trueblocks.h
src/monitors/: .gitignore  CMakeLists.txt  README.md
src/other/: .gitignore  CMakeLists.txt  README.md
src/samples/: .gitignore  CMakeLists.txt  Makefile  README.md
src/test-libs/: CMakeLists.txt
src/tests/: CMakeLists.txt  makefile
src/tools/: .gitignore  CMakeLists.txt  README.md  makefile
(+19366 files in other folders)
