# minimum cmake version supported
cmake_minimum_required (VERSION 2.6)

# folder project
project (monitors)

# Path to library include files
include_directories(${BASE_INCLUDE})

# messaging
# message (WARNING  "*** Entering monitor folder ***")

# Compilation order of the src subdirectories

#add_subdirectory(scripts)

#add_subdirectory(etherTip/parselib)
#add_subdirectory(etherTip)

#add_subdirectory(gonetwork/parselib)
#add_subdirectory(gonetwork)

#add_subdirectory(newbium/parselib)
#add_subdirectory(newbium)

#add_subdirectory(status/parselib)
#add_subdirectory(status)
